--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <span>Consultar Saldo</span>
                 </li>
                 <li class="menu-item" data-consult="datos">
-                    <span class="menu-icon">📊</span>
-                    <span>Planes de Datos</span>
+                    <span class="menu-icon">⏳</span>
+                    <span>¿Cuándo me recargo?</span>
                 </li>
                 <li class="menu-item" data-consult="voz">
                     <span class="menu-icon">📞</span>
